--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,6 +6,7 @@
 @import "container.scss";
 @import "main-header.scss";
 @import "main-nav.scss";
+@import "communication.scss";
 @import "slider.scss";
 @import "topic.scss";
 @import "purposes.scss";
