--- a/css/style.css
+++ b/css/style.css
@@ -325,7 +325,7 @@ a {
 }
 
 .test {
-  margin-bottom: 110px;
+  margin-bottom: 100px;
 }
 
 .test__inner {
@@ -375,7 +375,7 @@ a {
 }
 
 .purposes-slider {
-  margin-bottom: 135px;
+  margin-bottom: 100px;
 }
 
 .purposes-slider__title {
@@ -507,7 +507,7 @@ a {
 }
 
 .skills {
-  margin-bottom: 160px;
+  margin-bottom: 100px;
 }
 
 .skills__item {
@@ -515,7 +515,7 @@ a {
   height: auto;
   border-radius: 40px;
   background: linear-gradient(180deg, rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0) 100%);
-  margin-bottom: 80px;
+  margin-bottom: 40px;
 }
 
 .skills__title {
@@ -544,7 +544,7 @@ a {
 }
 
 .statistics {
-  margin-bottom: 150px;
+  margin-bottom: 100px;
 }
 
 .statistics__title {
@@ -687,6 +687,131 @@ a {
   padding: 0;
   text-align: center;
   color: var(--light-color);
+}
+
+.reviews {
+  margin-bottom: 100px;
+}
+
+.reviews__swiper-wrapper {
+  margin-bottom: 20px;
+}
+
+.reviews__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.reviews__title {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 24px;
+  color: var(--darken-color);
+  margin-left: 20px;
+}
+
+.reviews__slider-description {
+  width: 260px;
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  line-height: 19px;
+  color: var(--darken-color);
+  margin-bottom: 30px;
+}
+
+.reviews__slider-footer {
+  width: 260px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 10px;
+}
+
+.reviews__user .reviews__user-img {
+  width: 150px;
+  height: auto;
+}
+
+.reviews__description {
+  margin: 0;
+  padding: 0;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 19px;
+  color: var(--darken-color);
+}
+
+.reviews__arrow-inner {
+  position: relative;
+  margin: 0 auto;
+  width: 70px;
+  height: 40px;
+}
+
+.analysis__title {
+  margin: 0 0 30px 20px;
+  padding: 0;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 24px;
+  color: var(--darken-color);
+}
+
+.analysis__item {
+  height: auto;
+  margin: 0 auto;
+  background: linear-gradient(180deg, rgb(210, 201, 242) 30%, rgba(255, 255, 255, 0) 100%);
+  margin-bottom: 50px;
+}
+
+.analysis__list {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  counter-reset: list-counter;
+  width: 290px;
+  margin: 0 auto;
+  padding: 0;
+  padding-top: 30px;
+}
+
+.analysis__elem {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.analysis__text {
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  color: var(--darken-color);
+  margin: 0;
+  position: relative;
+  padding: 10px 70px;
+}
+.analysis__text::after {
+  counter-increment: list-counter;
+  content: counter(list-counter) "";
+  position: absolute;
+  font-family: "Montserrat", sans-serif;
+  font-size: 23px;
+  line-height: 39px;
+  color: var(--light-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  border-radius: 50%;
+  background: linear-gradient(180deg, #89c2ff 0%, #c2b4f5 100%);
 }
 
 /*# sourceMappingURL=style.css.map */
