--- a/css/analysis.css
+++ b/css/analysis.css
@@ -1,5 +1,5 @@
 .analysis__title {
-  margin: 0 0 30px 20px;
+  margin: 0 0 30px 25px;
   padding: 0;
   font-weight: 600;
   font-size: 20px;
@@ -19,7 +19,7 @@
   flex-direction: column;
   row-gap: 20px;
   counter-reset: list-counter;
-  width: 290px;
+  width: 250px;
   margin: 0 auto;
   padding: 0;
   padding-top: 30px;
@@ -32,13 +32,13 @@
 }
 
 .analysis__text {
+  position: relative;
   font-family: "Montserrat", sans-serif;
   font-size: 16px;
   line-height: 20px;
   color: var(--darken-color);
   margin: 0;
-  position: relative;
-  padding: 10px 70px;
+  padding: 10px 0 10px 70px;
 }
 .analysis__text::after {
   counter-increment: list-counter;
@@ -54,8 +54,8 @@
   width: 40px;
   height: 40px;
   left: 0;
-  top: 0;
-  bottom: 0;
+  top: 50%;
+  transform: translateY(-50%);
   border-radius: 50%;
   background: linear-gradient(180deg, #89c2ff 0%, #c2b4f5 100%);
 }
