--- a/css/style.css
+++ b/css/style.css
@@ -159,13 +159,10 @@ a {
 }
 
 .communication {
-<<<<<<< HEAD
-=======
   position: relative;
 }
 
 .communication {
->>>>>>> 3f0739e80b1a592325b2cef307c53d4f526b4fbf
   margin-bottom: 50px;
 }
 
@@ -328,11 +325,7 @@ a {
 }
 
 .test {
-<<<<<<< HEAD
-  margin-bottom: 110px;
-=======
   margin-bottom: 100px;
->>>>>>> 3f0739e80b1a592325b2cef307c53d4f526b4fbf
 }
 
 .test__inner {
@@ -382,11 +375,7 @@ a {
 }
 
 .purposes-slider {
-<<<<<<< HEAD
-  margin-bottom: 135px;
-=======
   margin-bottom: 100px;
->>>>>>> 3f0739e80b1a592325b2cef307c53d4f526b4fbf
 }
 
 .purposes-slider__title {
@@ -518,11 +507,7 @@ a {
 }
 
 .skills {
-<<<<<<< HEAD
-  margin-bottom: 160px;
-=======
   margin-bottom: 100px;
->>>>>>> 3f0739e80b1a592325b2cef307c53d4f526b4fbf
 }
 
 .skills__item {
@@ -530,11 +515,7 @@ a {
   height: auto;
   border-radius: 40px;
   background: linear-gradient(180deg, rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0) 100%);
-<<<<<<< HEAD
-  margin-bottom: 80px;
-=======
   margin-bottom: 40px;
->>>>>>> 3f0739e80b1a592325b2cef307c53d4f526b4fbf
 }
 
 .skills__title {
@@ -563,11 +544,7 @@ a {
 }
 
 .statistics {
-<<<<<<< HEAD
-  margin-bottom: 150px;
-=======
   margin-bottom: 100px;
->>>>>>> 3f0739e80b1a592325b2cef307c53d4f526b4fbf
 }
 
 .statistics__title {
@@ -712,8 +689,6 @@ a {
   color: var(--light-color);
 }
 
-<<<<<<< HEAD
-=======
 .reviews {
   margin-bottom: 100px;
 }
@@ -809,6 +784,9 @@ a {
   align-items: center;
   justify-content: flex-start;
 }
+.analysis__elem:last-child .analysis__text::before {
+  content: none;
+}
 
 .analysis__text {
   position: relative;
@@ -838,6 +816,18 @@ a {
   border-radius: 50%;
   background: linear-gradient(180deg, #89c2ff 0%, #c2b4f5 100%);
 }
+.analysis__text::before {
+  content: "";
+  position: absolute;
+  background-image: url(../img/analysis-line.png);
+  background-repeat: repeat;
+  width: 2px;
+  height: 160%;
+  color: var(--light-color);
+  /* z-index: 1; */
+  background-size: 92%;
+  left: 20px;
+  top: 15px;
+}
 
->>>>>>> 3f0739e80b1a592325b2cef307c53d4f526b4fbf
 /*# sourceMappingURL=style.css.map */
