--- a/sass/analysis.scss
+++ b/sass/analysis.scss
@@ -1,3 +1,10 @@
+.analysis {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 100px;
+}
+
 .analysis__title {
   margin: 0 0 30px 25px;
   padding: 0;
@@ -15,7 +22,7 @@
     rgb(210, 201, 242) 30%,
     rgba(255, 255, 255, 0) 100%
   );
-  margin-bottom: 50px;
+  padding-bottom: 70px;
 }
 
 .analysis__list {
@@ -78,9 +85,12 @@
     width: 2px;
     height: calc((100% - 10%) - -70%);
     color: var(--light-color);
-    /* z-index: 1; */
     background-size: 92%;
     left: 20px;
     top: 15px;
   }
+}
+
+.analysis__btn-link {
+  font-weight: 400;
 }
