--- a/css/advantages.css
+++ b/css/advantages.css
@@ -1,11 +1,11 @@
 .advantages {
   background-image: url("../img/advantages-bg.png");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100%;
   background-position: 50% 0;
   margin-top: -240px;
   padding-top: 190px;
-  padding-bottom: 100px;
+  margin-bottom: 100px;
 }
 
 .advantages__company,
@@ -91,6 +91,37 @@
   border: 1px solid var(--light-color);
   margin: 0 auto;
   font-weight: 400;
+  margin-bottom: 50px;
+}
+
+.slide-bg2::after {
+  background-image: url("../img/advantages-slide-2.png");
+  top: 25px;
+}
+
+.slide-bg3::after {
+  background-image: url("../img/advantages-slide-3.png");
+  top: 25px;
+  background-size: 45%;
+  background-position: 110% 100%;
+}
+
+.slide-bg4::after {
+  background-image: url("../img/advantages-slide-4.png");
+  background-size: 65%;
+  background-position: 99% 100%;
+}
+
+.slide-bg5::after {
+  background-image: url("../img/advantages-slide-5.png");
+  background-size: 80%;
+  background-position: 99% 100%;
+}
+
+.slide-bg6::after {
+  background-image: url("../img/advantages-slide-6.png");
+  background-size: 32%;
+  background-position: 99% 100%;
 }
 
 /*# sourceMappingURL=advantages.css.map */
