--- a/css/style.css
+++ b/css/style.css
@@ -843,11 +843,11 @@ a {
 .advantages {
   background-image: url("../img/advantages-bg.png");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100%;
   background-position: 50% 0;
   margin-top: -240px;
   padding-top: 190px;
-  padding-bottom: 100px;
+  margin-bottom: 100px;
 }
 
 .advantages__company,
@@ -933,6 +933,92 @@ a {
   border: 1px solid var(--light-color);
   margin: 0 auto;
   font-weight: 400;
+  margin-bottom: 50px;
+}
+
+.slide-bg2::after {
+  background-image: url("../img/advantages-slide-2.png");
+  top: 25px;
+}
+
+.slide-bg3::after {
+  background-image: url("../img/advantages-slide-3.png");
+  top: 25px;
+  background-size: 45%;
+  background-position: 110% 100%;
+}
+
+.slide-bg4::after {
+  background-image: url("../img/advantages-slide-4.png");
+  background-size: 65%;
+  background-position: 99% 100%;
+}
+
+.slide-bg5::after {
+  background-image: url("../img/advantages-slide-5.png");
+  background-size: 80%;
+  background-position: 99% 100%;
+}
+
+.slide-bg6::after {
+  background-image: url("../img/advantages-slide-6.png");
+  background-size: 32%;
+  background-position: 99% 100%;
+}
+
+.team__box-title {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 29px;
+  text-align: center;
+  padding-left: 0;
+}
+
+.team__box-citation {
+  width: 250px;
+  margin: 0 auto;
+  padding: 0;
+  font-size: 17px;
+  line-height: 22px;
+  margin-bottom: 20px;
+}
+
+.team__box-inner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.team__user-img {
+  width: 220px;
+}
+
+.main-footer__logo {
+  margin-bottom: 10px;
+  margin-left: 30px;
+}
+
+.main-footer__box {
+  width: 100%;
+  height: auto;
+  background: linear-gradient(180deg, #ffffff 0%, rgba(255, 255, 255, 0) 100%);
+  border-radius: 40px;
+  padding: 50px 30px;
+}
+
+.main-footer__list {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.main-footer__item {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 18px;
 }
 
 /*# sourceMappingURL=style.css.map */
