--- a/css/main-header.css
+++ b/css/main-header.css
@@ -1,6 +1,34 @@
+.main-header {
+  position: relative;
+}
+
 .main-header__inner {
   display: flex;
   justify-content: space-around;
+}
+
+.main-header__menu {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: auto;
+  background: #f1f2f4;
+  z-index: 2;
+}
+
+.main-header__menu-logo {
+  padding-top: 5px;
+}
+
+.none {
+  display: none;
+}
+
+.burger__active {
+  z-index: 3;
+}
+.burger__active span {
+  background-color: #d2c9f2;
 }
 
 /*# sourceMappingURL=main-header.css.map */
