--- a/css/style.css
+++ b/css/style.css
@@ -299,11 +299,19 @@ a {
 .purposes {
   position: relative;
   margin-bottom: 50px;
-  padding-bottom: 400px;
+  padding-bottom: 380px;
+}
+.purposes::after {
+  content: "";
+  position: absolute;
+  width: 300px;
+  height: 491px;
   background: url(../img/special-user.png);
   background-repeat: no-repeat;
   background-size: 100%;
-  background-position: 0% 100%;
+  right: 0;
+  z-index: 3;
+  bottom: 0;
 }
 
 .purposes__title {
@@ -322,18 +330,26 @@ a {
   line-height: 29px;
 }
 
-.purposes_img {
-  position: absolute;
-  top: 111px;
-  width: 300px;
-  height: 632px;
-  margin: 0 auto;
-}
-
 .purposes__items {
+  position: relative;
   display: flex;
   flex-direction: column;
   gap: 18px;
+  z-index: 1;
+}
+.purposes__items::after {
+  content: "";
+  position: absolute;
+  width: 280px;
+  height: 600px;
+  background-image: url(../img/transparent-bg.png);
+  background-repeat: no-repeat;
+  background-position: 50% 40%;
+  background-size: contain;
+  z-index: -1;
+  top: 0px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .purposes__item {
