исправлено отображение фонов и отступов, исправлено управление слайдеров некоторых секций, в меню бургера и футера добавлены ссылки

--- a/css/main-footer.css
+++ b/css/main-footer.css
@@ -24,4 +24,9 @@
   line-height: 18px;
 }
 
+.main-footer__link {
+  text-decoration: none;
+  color: var(--dark-color);
+}
+
 /*# sourceMappingURL=main-footer.css.map */
