--- a/css/purposes.css
+++ b/css/purposes.css
@@ -18,7 +18,7 @@
 
 .purposes__title {
   font-family: "Montserrat", sans-serif;
-  margin: 0 0 70px 0;
+  margin: 0 0 50px 0;
   color: var(--light-color);
   font-weight: 400;
   font-size: 16px;
@@ -72,6 +72,13 @@
 }
 .purposes__item:nth-child(2n+1) {
   margin-left: 30px;
+}
+
+.purposes__arrow-inner .swiper-button-prev {
+  margin-left: auto;
+}
+.purposes__arrow-inner .swiper-button-next {
+  margin-right: auto;
 }
 
 /*# sourceMappingURL=purposes.css.map */
