--- a/css/reviews.css
+++ b/css/reviews.css
@@ -61,4 +61,26 @@
   height: 40px;
 }
 
+.reviews__next::after,
+.reviews__prev::after {
+  content: "";
+  position: absolute;
+  width: 13px;
+  height: 22px;
+  background: url("../img/svg/arrow-next.svg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
+.reviews__next {
+  right: -7px;
+}
+
+.reviews__prev {
+  left: -7px;
+}
+.reviews__prev::after {
+  transform: rotate(180deg);
+}
+
 /*# sourceMappingURL=reviews.css.map */
