--- a/css/team.css
+++ b/css/team.css
@@ -7,6 +7,10 @@
   padding-left: 0;
 }
 
+.team-slider__wrapper {
+  margin-bottom: 20px;
+}
+
 .team__box-citation {
   width: 250px;
   margin: 0 auto;
