--- a/sass/purposes.scss
+++ b/sass/purposes.scss
@@ -19,7 +19,7 @@
 
 .purposes__title {
   font-family: "Montserrat", sans-serif;
-  margin: 0 0 70px 0;
+  margin: 0 0 50px 0;
   color: var(--light-color);
   font-weight: 400;
   font-size: 16px;
@@ -75,5 +75,15 @@
 
   &:nth-child(2n + 1) {
     margin-left: 30px;
+  }
+}
+
+.purposes__arrow-inner {
+  .swiper-button-prev {
+    margin-left: auto;
+  }
+
+  .swiper-button-next {
+    margin-right: auto;
   }
 }
