--- a/sass/reviews.scss
+++ b/sass/reviews.scss
@@ -62,3 +62,27 @@
   width: 70px;
   height: 40px;
 }
+
+.reviews__next,
+.reviews__prev {
+  &::after {
+    content: "";
+    position: absolute;
+    width: 13px;
+    height: 22px;
+    background: url("../img/svg/arrow-next.svg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+  }
+}
+
+.reviews__next {
+  right: -7px;
+}
+
+.reviews__prev {
+  left: -7px;
+  &::after {
+    transform: rotate(180deg);
+  }
+}
