--- a/sass/test.scss
+++ b/sass/test.scss
@@ -5,8 +5,8 @@
 .test__inner {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  width: 154px;
+  align-items: center;
+  min-width: 200px;
   margin: 0 auto;
 }
 
@@ -25,7 +25,7 @@
   font-family: "Montserrat", sans-serif;
   font-size: 16px;
   line-height: 20px;
-  letter-spacing: 1px;
+  font-weight: 400;
   margin: 0;
   padding: 0;
   margin-bottom: 20px;
