--- a/css/purposes.css
+++ b/css/purposes.css
@@ -1,84 +1,17 @@
-.purposes {
-  position: relative;
-  margin-bottom: 50px;
-  padding-bottom: 300px;
-}
-.purposes::after {
-  content: "";
-  position: absolute;
-  width: 333px;
-  height: 400px;
-  background: url(../img/special-user.png);
-  background-repeat: no-repeat;
-  background-size: 100%;
-  right: 0;
-  z-index: 3;
-  bottom: 0;
-}
+/* Error: Undefined variable.
+ *    ,
+ * 28 |   @media (min-width: $desktop-width) {
+ *    |                      ^^^^^^^^^^^^^^
+ *    '
+ *   sass\purposes.scss 28:22  root stylesheet */
 
-.purposes__title {
-  font-family: "Montserrat", sans-serif;
-  margin: 0 0 50px 0;
-  color: var(--light-color);
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 20px;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Undefined variable.\a    \2577 \a 28 \2502    @media (min-width: $desktop-width) {\d\a    \2502                       ^^^^^^^^^^^^^^\a    \2575 \a   sass\\purposes.scss 28:22  root stylesheet";
 }
-.purposes__title span {
-  display: inline-block;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 29px;
-}
-
-.purposes__items {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  gap: 18px;
-  z-index: 1;
-}
-.purposes__items::after {
-  content: "";
-  position: absolute;
-  width: 280px;
-  height: 600px;
-  background-image: url("../img/transparent-bg.png");
-  background-repeat: no-repeat;
-  background-position: 50% 40%;
-  background-size: contain;
-  z-index: -1;
-  top: 0px;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.purposes__item {
-  position: relative;
-  width: 250px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 10px 20px;
-  background-color: #f1f2f4;
-  border-radius: 30px 30px 0px 30px;
-  color: var(--darken-color);
-  font-family: "Lato", sans-serif;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 17px;
-  text-align: left;
-}
-.purposes__item:nth-child(2n+1) {
-  margin-left: 30px;
-}
-
-.purposes__arrow-inner .swiper-button-prev {
-  margin-left: auto;
-}
-.purposes__arrow-inner .swiper-button-next {
-  margin-right: auto;
-}
-
-/*# sourceMappingURL=purposes.css.map */
