--- a/css/topic.css
+++ b/css/topic.css
@@ -1,87 +1,17 @@
-.topic {
-  margin-bottom: 50px;
-}
+/* Error: Undefined variable.
+ *   ,
+ * 4 |   @media (min-width: $desktop-width) {
+ *   |                      ^^^^^^^^^^^^^^
+ *   '
+ *   sass\topic.scss 4:22  root stylesheet */
 
-.topic__inner {
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-  flex-wrap: wrap;
-}
-
-.topic__items {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  margin-bottom: 40px;
-}
-
-.topic__label {
-  position: relative;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
   display: block;
-  padding-left: 26px;
-  cursor: pointer;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 24px;
-  color: var(--darken-color);
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Undefined variable.\a   \2577 \a 4 \2502    @media (min-width: $desktop-width) {\d\a   \2502                       ^^^^^^^^^^^^^^\a   \2575 \a   sass\\topic.scss 4:22  root stylesheet";
 }
-.topic__label:hover::before {
-  border-color: rgba(255, 255, 255, 0.5);
-}
-.topic__label::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 13px;
-  height: 13px;
-  border: 2px solid var(--light-color);
-  border-radius: 50%;
-}
-.topic__label::after {
-  content: none;
-  position: absolute;
-  left: 0;
-  top: 50%;
-  width: 13px;
-  height: 13px;
-  transform: translateY(-50%);
-  border-radius: 50%;
-  background-color: var(--light-color);
-}
-
-.topic__radio[type=radio]:checked + .topic__label::after {
-  content: "";
-}
-
-.topic__radio[type=radio]:focus + .topic__label::before {
-  border-color: var(--dark-color);
-}
-
-.topic__btn-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 257px;
-  padding: 23px 0;
-  background-color: var(--light-color);
-  border-radius: 40px;
-  color: var(--darken-color);
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 19px;
-  margin-bottom: 5px;
-}
-
-.topic__price {
-  display: flex;
-  justify-content: flex-end;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 19px;
-  color: var(--light-color);
-}
-
-/*# sourceMappingURL=topic.css.map */
