--- a/sass/container.scss
+++ b/sass/container.scss
@@ -2,4 +2,9 @@
   width: 320px;
   margin: 0 auto;
   padding: 0 10px;
+
+  @media (min-width: $desktop-width) {
+    width: 1440px;
+    padding: 0 150px;
+  }
 }
