--- a/sass/purposes.scss
+++ b/sass/purposes.scss
@@ -25,12 +25,26 @@
   font-size: 16px;
   line-height: 20px;
 
+  @media (min-width: $desktop-width) {
+    display: flex;
+    flex-direction: column;
+    width: 147px;
+    font-weight: 700;
+  }
+
   span {
     display: inline-block;
     font-family: "Montserrat", sans-serif;
     font-weight: 600;
     font-size: 24px;
     line-height: 29px;
+
+    @media (min-width: $desktop-width) {
+      font-size: 36px;
+      line-height: 50px;
+      font-weight: 600;
+      width: 415px;
+    }
   }
 }
 
@@ -54,6 +68,13 @@
     top: 0px;
     left: 50%;
     transform: translateX(-50%);
+  }
+
+  @media (min-width: $desktop-width) {
+    position: absolute;
+    right: 0;
+    left: 50%;
+    top: 0;
   }
 }
 
